<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ci_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_profile_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <ImageView
        android:id="@+id/iv_image_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_plus"
        android:background="@drawable/selector_image_button"
        app:layout_constraintBottom_toBottomOf="@+id/ci_profile_image"
        app:layout_constraintEnd_toEndOf="@+id/ci_profile_image"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="@+id/ci_profile_image"
        app:layout_constraintTop_toTopOf="@+id/ci_profile_image"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/title_name"
        android:textColor="@color/gray_400"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/ci_profile_image"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:hint="@string/placeholder_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="24"
        android:maxLines="1"
        android:padding="@dimen/padding_10_dp"
        android:textColor="@color/black_70"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".9" />

    <TextView
        android:id="@+id/tv_bio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/bio"
        android:textColor="@color/gray_400"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <EditText
        android:id="@+id/et_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="top"
        android:hint="@string/hint_bio"
        android:importantForAutofill="no"
        android:maxLength="60"
        android:maxLines="4"
        android:minLines="4"
        android:padding="@dimen/padding_10_dp"
        android:text=""
        android:textColor="@color/black_70"
        android:textCursorDrawable="@null"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_complete"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_bio_title"
        app:layout_constraintTop_toBottomOf="@id/tv_bio_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/selector_rounded_button"
        android:drawableEnd="@drawable/ic_arrow_img"
        android:drawablePadding="32dp"
        android:paddingLeft="@dimen/padding_10_dp"
        android:paddingRight="@dimen/padding_10_dp"
        android:text="@string/title_complete"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

</androidx.constraintlayout.widget.ConstraintLayout>