<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ci_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_profile_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.10" />

        <ImageView
            android:id="@+id/iv_image_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_image_button"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_plus"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/ci_profile_image"
            app:layout_constraintEnd_toEndOf="@+id/ci_profile_image"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="@+id/ci_profile_image"
            app:layout_constraintTop_toTopOf="@+id/ci_profile_image"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/ib_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_image_button"
            android:padding="20dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/ci_profile_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ci_profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.019"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/title_name"
            android:textColor="@color/gray_400"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/ib_edit"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ci_profile_image" />

        <EditText
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:enabled="false"
            android:importantForAutofill="no"
            android:maxLines="1"
            android:padding="@dimen/padding_10_dp"
            android:text="@string/placeholder_username"
            android:textColor="@color/black_70"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ib_edit"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bio"
            android:textColor="@color/gray_400"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/tv_username" />

        <EditText
            android:id="@+id/et_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_rectangle"
            android:enabled="false"
            android:gravity="top"
            android:hint="@string/hint_bio"
            android:maxLength="60"
            android:maxLines="4"
            android:minLines="4"
            android:padding="@dimen/padding_10_dp"
            android:text=""
            android:textColor="@color/black_70"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_bio"
            app:layout_constraintTop_toBottomOf="@id/tv_bio"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill,TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_rounded_button"
            android:drawableEnd="@drawable/ic_arrow_img"
            android:drawablePadding="24dp"
            android:paddingStart="@dimen/padding_20_dp"
            android:paddingEnd="@dimen/padding_10_dp"
            android:text="@string/title_update"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_bio"
            app:layout_constraintStart_toStartOf="@+id/et_bio"
            app:layout_constraintTop_toBottomOf="@+id/et_bio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>